--- a/.github/workflows/kute_multi_self.yml
+++ b/.github/workflows/kute_multi_self.yml
@@ -64,10 +64,10 @@ jobs:
               image="${images[$i]}"
               if [ -z "$image" ]; then
                 echo "Image input is empty, using default image."
-                python setup_node.py --client $client
+                python3 setup_node.py --client $client
               else
                 echo "Using provided image: $image for $client"
-                python setup_node.py --client $client --image $image
+                python3 setup_node.py --client $client --image $image
               fi
               if [ -z "${{ github.event.inputs.warmup}}" ]; then
                 echo "Running script without warm up."
@@ -86,7 +86,8 @@ jobs:
       - name: Get metrics from results
         run: |
           runs=${{ github.event.inputs.runs }}
-          python results_2.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
+          python3 report_tables.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
+          python3 report_html.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
 
       - name: Zip the results folder
         run: zip -r results.zip results
