--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -104,10 +104,10 @@ jobs:
               client="${clients[$i]}"
               image="${images[$i]}"
               if [ -z "$image" ]; then
-                python setup_node.py --client $client
+                python3 setup_node.py --client $client
               else
                 echo "Using provided image: $image for $client"
-                python setup_node.py --client $client --image $image
+                python3 setup_node.py --client $client --image $image
               fi
               if [ -z "${{ github.event.inputs.warmup }}" ]; then
                 echo "Running script without warm up."
@@ -168,7 +168,8 @@ jobs:
       - name: Process combined results
         run: |
           runs=${{ github.event.inputs.runs }}
-          python results_2.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
+          python3 report_tables.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
+          python3 report_html.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
 
       - name: Zip the results folder
         run: |
