--- a/.github/workflows/kute_multi_self.yml
+++ b/.github/workflows/kute_multi_self.yml
@@ -90,7 +90,7 @@ jobs:
           python3 report_html.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
 
       - name: Zip the results folder
-        run: zip -r results.zip results
+        run: zip -r results.zip results/reports
 
       - name: Upload results as artifact
         uses: actions/upload-artifact@v4
