feat: add yaml to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ matplotlib~=3.5.0
 requests~=2.27.1
 py-cpuinfo~=9.0.0
 psutil~=5.9.8
-bs4
+bs4~=0.0.2
 html5lib
 lxml
+
+numpy~=1.26.4
+PyYAML~=6.0.1
+beautifulsoup4~=4.12.3
