--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -75,7 +75,7 @@ jobs:
       - name: List leaf directories
         run: |
           # Define the directory to search
-          PARENT_DIR="tests/"
+          PARENT_DIR=${{ github.event.inputs.test }}
       
           # Find directories that do not contain subdirectories
           LEAF_DIRS=$(find "$PARENT_DIR" -type d | while read -r dir; do
