feat: add csv and move everything to reports

--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -173,7 +173,7 @@ jobs:
 
       - name: Zip the results folder
         run: |
-          zip -r reports.zip extracted-results/results/reports
+          zip -r reports.zip reports
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
