--- a/images.yaml
+++ b/images.yaml
@@ -3,3 +3,4 @@ images:
   geth: "ethereum/client-go:v1.14.0"
   reth: "ghcr.io/paradigmxyz/reth:v0.2.0-beta.6"
   erigon: "thorax/erigon:v2.59.3"
+  besu: " hyperledger/besu:24.5.2"
