--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -2,11 +2,11 @@ version: "3.9"
 services:
   execution:
     stop_grace_period: 30m
-    container_name: sedge-execution-client
+    container_name: gas-execution-client
     restart: unless-stopped
     image: ${EC_IMAGE_VERSION}
     networks:
-    - sedge
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/var/lib/besu/data
     - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
@@ -45,5 +45,5 @@ services:
         max-size: 10m
         max-file: "10"
 networks:
-  sedge:
-    name: sedge-network
+  gas:
+    name: gas-network
