--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -107,15 +107,15 @@ jobs:
           run="${{ matrix.run }}"
           test_path="${{ github.event.inputs.test }}"
           
+          images="${{ github.event.inputs.images }}"
           for test_dir in $LEAF_DIRS; do
             for i in "${!clients[@]}"; do
               client="${clients[$i]}"
-              image="${images[$i]}"
               if [ -z "$image" ]; then
                 python3 setup_node.py --client $client
               else
                 echo "Using provided image: $image for $client"
-                python3 setup_node.py --client $client --image $image
+                python3 setup_node.py --client $client --imageBulk $images
               fi
               if [ -z "${{ github.event.inputs.warmup }}" ]; then
                 echo "Running script without warm up."
@@ -177,8 +177,14 @@ jobs:
       - name: Process combined results
         run: |
           runs=${{ github.event.inputs.runs }}
-          python3 report_tables.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
-          python3 report_html.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs
+          images="${{ github.event.inputs.images }}"
+          if [ -z "$image" ]; then
+            python3 report_tables.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs 
+            python3 report_html.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs 
+          else
+            python3 report_tables.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs --images $images
+            python3 report_html.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} --runs $runs --images $images
+          fi
 
       - name: Zip the results folder
         run: |
