--- a/.github/workflows/multi-parallel-private.yml
+++ b/.github/workflows/multi-parallel-private.yml
@@ -142,10 +142,10 @@ jobs:
             fi
             if [ -z "${{ github.event.inputs.warmup }}" ]; then
               echo "Running script without warm up."
-              python3 run_kute.py --output results --testsPath private-repo/"$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
+              python3 run_kute.py --output results --testsPath "private-repo/$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
             else
               echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
-              python3 run_kute.py --output results --testsPath private-repo/"$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
+              python3 run_kute.py --output results --testsPath "private-repo/$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
             fi
             cl_name=$(echo "$client" | cut -d '_' -f 1)
             cd "scripts/$cl_name"
