--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -140,7 +140,7 @@ jobs:
             fi
             cl_name=$(echo "$client" | cut -d '_' -f 1)
             cd "scripts/$cl_name"
-            docker-compose down
+            docker compose down
             sudo rm -rf execution-data
             cd ../..
           done
