--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -188,6 +188,9 @@ jobs:
         run: |
           mkdir -p extracted-results
           find combined-results -name '*.zip' -exec unzip -o {} -d extracted-results \;
+#          Copy all the folders from extracted-results/results/ that match docker_* to reports/
+          mkdir -p reports
+          cp -r extracted-results/results/docker_* reports/
 
       - name: Process combined results
         run: |
