--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
     command:
     - --genesis-file=/tmp/chainspec/chainspec.json
     - --bonsai-historical-block-limit=10000
+    - --bonsai-limit-trie-logs-enabled=false
+    - --Xbonsai-parallel-tx-processing-enabled=true
     - --data-path=/var/lib/besu/data
     - --metrics-enabled=true
     - --metrics-host=0.0.0.0
