--- a/images.yaml
+++ b/images.yaml
@@ -1,6 +1,6 @@
 images:
   nethermind: "nethermind/nethermind:1.26.0"
   geth: "ethereum/client-go:v1.15.10"
-  reth: "ghcr.io/paradigmxyz/reth:v0.2.0-beta.9"
+  reth: "ghcr.io/paradigmxyz/reth:v1.3.12"
   erigon: "thorax/erigon:v2.60.1"
   besu: "hyperledger/besu:25.4.1"
