update neth image

--- a/images.yaml
+++ b/images.yaml
@@ -1,5 +1,5 @@
 images:
-  nethermind: "nethermind/nethermind:1.26.0"
+  nethermind: "nethermindeth/nethermind:release-1.31.9"
   geth: "ethereum/client-go:v1.15.10"
   reth: "ghcr.io/paradigmxyz/reth:v1.3.12"
   erigon: "thorax/erigon:v2.60.1"
