--- a/images.yaml
+++ b/images.yaml
@@ -2,5 +2,5 @@ images:
   nethermind: "nethermindeth/nethermind:release-1.31.9"
   geth: "ethereum/client-go:v1.15.10"
   reth: "ghcr.io/paradigmxyz/reth:v1.3.12"
-  erigon: "thorax/erigon:v2.60.1"
+  erigon: "erigontech/erigon:v3.0.2"
   besu: "hyperledger/besu:25.4.1"
