--- a/scripts/erigon/docker-compose.yaml
+++ b/scripts/erigon/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
     - "8008:8008/tcp"
     - "8551:8551"
     command:
+    - --externalcl
     - --private.api.addr=0.0.0.0:9090
     - --nat=any
     - --http
