--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-matplotlib~=3.5.0
+matplotlib~=3.10.3
 requests~=2.27.1
 py-cpuinfo~=9.0.0
 psutil~=5.9.8
@@ -9,3 +9,5 @@ lxml
 numpy~=1.26.4
 PyYAML~=6.0.1
 beautifulsoup4~=4.12.3
+types-beautifulsoup4~=4.12.0.20250204
+psycopg2-binary~=2.9.10
