fix for apple silicon, bump besu to 24.8.0 (#14)
* fix for apple silicon, bump besu to 24.8.0

Signed-off-by: garyschulte <garyschulte@gmail.com>

* use high spec flag

Signed-off-by: garyschulte <garyschulte@gmail.com>

* vanilla configs

Signed-off-by: garyschulte <garyschulte@gmail.com>

---------

Signed-off-by: garyschulte <garyschulte@gmail.com>
Co-authored-by: Marcin Sobczak <77129288+marcindsobczak@users.noreply.github.com>

--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     - 8551
     command:
     - --genesis-file=/tmp/chainspec/chainspec.json
+    - --bonsai-historical-block-limit=10000
+    - --bonsai-limit-trie-logs-enabled=false
     - --data-path=/var/lib/besu/data
     - --metrics-enabled=true
     - --metrics-host=0.0.0.0
