--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -1,13 +1,13 @@
-version: "3.9"
 services:
   execution-sync:
     container_name: gas-execution-client-sync
     image: ${EC_IMAGE_VERSION}
+    pull_policy: always
     networks:
-    - gas
+      - gas
     volumes:
-    - ${EC_DATA_DIR}:/var/lib/reth
-    - ${GENESIS_PATH}:/tmp/genesis/genesis.json
+      - ${EC_DATA_DIR}:/var/lib/reth
+      - ${GENESIS_PATH}:/tmp/genesis/genesis.json
     entrypoint: /usr/local/bin/reth init --datadir /var/lib/reth --chain /tmp/genesis/genesis.json
   execution:
     stop_grace_period: 30m
@@ -17,21 +17,22 @@ services:
         condition: service_completed_successfully
     restart: unless-stopped
     image: ${EC_IMAGE_VERSION}
+    pull_policy: always
     networks:
-    - gas
+      - gas
     volumes:
-    - ${EC_DATA_DIR}:/var/lib/reth
-    - ${GENESIS_PATH}:/tmp/genesis/genesis.json
-    - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
+      - ${EC_DATA_DIR}:/var/lib/reth
+      - ${GENESIS_PATH}:/tmp/genesis/genesis.json
+      - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
     ports:
-    - "30303:30303/tcp"
-    - "30303:30303/udp"
-    - "8008:8008/tcp"
-    - "8551:8551"
+      - "30303:30303/tcp"
+      - "30303:30303/udp"
+      - "8008:8008/tcp"
+      - "8551:8551"
     expose:
-    - 8545
-    - 8546
-    - 8551
+      - 8545
+      - 8546
+      - 8551
     command:
       - node
       - --datadir=/var/lib/reth
