--- a/images.yaml
+++ b/images.yaml
@@ -1,6 +1,6 @@
 images:
-  nethermind: "nethermindeth/nethermind:release-1.31.10"
-  geth: "ethereum/client-go:v1.15.11"
-  reth: "ghcr.io/paradigmxyz/reth:v1.3.12"
-  erigon: "erigontech/erigon:v3.0.3"
-  besu: "hyperledger/besu:25.4.1"
+  nethermind: "nethermindeth/nethermind:master"
+  geth: "ethpandaops/geth:master"
+  reth: "ethpandaops/reth:main"
+  erigon: "ethpandaops/erigon:main"
+  besu: "hyperledger/besu:develop"
