--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -44,9 +44,13 @@ services:
       options:
         max-size: 10m
         max-file: "10"
+    labels:
+      metrics_enabled: "true"
+      metrics_port: "8008"
+      logs_enabled: "false"
   alloy:
     environment:
-      GA_METRICS_LABELS_EXECUTION_CLIENT: "besu"
+      METRICS_LABELS_EXECUTION_CLIENT: "besu"
     extends:
       file: ../addons/alloy/compose.yaml
       service: alloy
