feat: add instance environment variable to docker-compose files for execution clients

--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -57,6 +57,7 @@ services:
       metrics_enabled: "true"
       metrics_port: "8008"
       logs_enabled: "false"
+      instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
     environment:
       METRICS_LABELS_EXECUTION_CLIENT: "reth"
