--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -50,6 +50,7 @@ services:
       metrics_enabled: "true"
       metrics_port: "8008"
       logs_enabled: "false"
+      instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
     environment:
       METRICS_LABELS_EXECUTION_CLIENT: "nethermind"
