Set Erigon with experimental flag

--- a/scripts/erigon/docker-compose.yaml
+++ b/scripts/erigon/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
       - --metrics.addr=0.0.0.0
       - --metrics.port=8008
       - --db.size.limit=2GB
+      - --experimental.always-generate-changesets
     logging:
       driver: json-file
       options:
