--- a/images.yaml
+++ b/images.yaml
@@ -4,3 +4,4 @@ images:
   reth: "ethpandaops/reth:performance"
   erigon: "erigontech/erigon:docker_diffsets"
   besu: "ethpandaops/besu:performance"
+  nimbus: "statusim/nimbus-eth1:master"
