--- a/images.yaml
+++ b/images.yaml
@@ -2,5 +2,5 @@ images:
   nethermind: "ethpandaops/nethermind:performance"
   geth: "ethpandaops/geth:performance"
   reth: "ethpandaops/reth:performance"
-  erigon: "erigontech/erigon:docker_diffsets"
+  erigon: "erigontech/erigon:performance"
   besu: "ethpandaops/besu:performance"
